Issue #2082873 by jayson: Fixed size and positioning of media overlay dialogs.

--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,6 @@
   "name": "wetkit_ember",
   "version": "1.0.0",
   "dependencies": {
-    "respond": "fubhy/respond",
-    "selectivizr": "fubhy/selectivizr",
-    "html5shiv": "fubhy/html5shiv",
-    "matchmedia": "fubhy/matchmedia",
-    "pie": "fubhy/pie"
+    "pace": "HubSpot/pace"
   }
 }
